# CppEphem

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.md  CodeCoverage.cmake  Doxyfile  DoxygenLayout.xml  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  doxygen.config  gen_coverage.sh  index.html  make_docs.sh  sonar-project.properties
AstroCoordinates/: main.cpp
AstroCoordinates.xcodeproj/: project.pbxproj
AstroCoordinates.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CppEphem/include/: CEBody.h  CECoordinates.h  CEDate.h  CELinkedCoordinates.h  CENamespace.h  CEObservation.h  CEObserver.h  CEPlanet.h  CERunningDate.h  CETime.h  CLOptions.h  CppEphem.h
CppEphem/src/: CEBody.cpp  CECoordinates.cpp  CEDate.cpp  CELinkedCoordinates.cpp  CENamespace.cpp  CEObservation.cpp  CEObserver.cpp  CEPlanet.cpp  CERunningDate.cpp  CETime.cpp  CMakeLists.txt  Makefile.am  angsep.cpp  cal2jd.cpp  cal2mjd.cpp  cirs2gal.cpp  cirs2obs.cpp  gal2cirs.cpp  gal2obs.cpp  icrs2cirs.cpp  icrs2gal.cpp  icrs2obs.cpp  jd2cal.cpp  jd2mjd.cpp  mjd2cal.cpp  mjd2jd.cpp  obs2cirs.cpp  obs2gal.cpp  obs2icrs.cpp  planetephem.cpp  planetpositions.cpp
cppephem/: CMakeLists.txt
cppephem/exec/: CMakeLists.txt  convcoord.cpp  planetephem.cpp
cppephem/include/: CEAngle.h  CEBase.h  CEBody.h  CECoordinates.h  CECorrections.h  CEDate.h  CEException.h  CENamespace.h  CEObservation.h  CEObserver.h  CEPlanet.h  CERunningDate.h  CESkyCoord.h  CETime.h  CppEphem.h
cppephem/src/: CEAngle.cpp  CEBase.cpp  CEBody.cpp  CECoordinates.cpp  CECorrections.cpp  CEDate.cpp  CEException.cpp  CENamespace.cpp  CEObservation.cpp  CEObserver.cpp  CEPlanet.cpp  CERunningDate.cpp  CESkyCoord.cpp  CETime.cpp  CMakeLists.txt  Makefile.am  angsep.cpp  cal2jd.cpp  cal2mjd.cpp  cirs2gal.cpp  cirs2icrs.cpp  cirs2obs.cpp  gal2cirs.cpp  gal2icrs.cpp  gal2obs.cpp  icrs2cirs.cpp  icrs2gal.cpp  icrs2obs.cpp  jd2cal.cpp  jd2mjd.cpp  mjd2cal.cpp  mjd2jd.cpp  obs2cirs.cpp  obs2gal.cpp  obs2icrs.cpp  planetephem.cpp  planetpositions.cpp
cppephem/support/: CECorrections.cpp  CECorrections.h  CEExecOptions.h  CLOptions.h
cppephem/swig/: CEAngle.i  CEBase.i  CEBody.i  CECorrections.i  CEDate.i  CEException.i  CENamespace.i  CEObservation.i  CEObserver.i  CERunningDate.i  CESkyCoord.i  CETime.i  CMakeLists.txt  cppephem.i
cppephem/swig/pyext/: CMakeLists.txt  setup.py.in
cppephem/swig/pyext/cppephem/: __init__.py.in
cppephem/swig/pyext/test/: __init__.py  test_ceangle.py
cppephem/test/: CMakeLists.txt  test_CEAngle.cpp  test_CEAngle.h  test_CEBody.cpp  test_CEBody.h  test_CECoordinates.cpp  test_CECoordinates.h  test_CEDate.cpp  test_CEDate.h  test_CEException.cpp  test_CEException.h  test_CENamespace.cpp  test_CENamespace.h  test_CEObservation.cpp  test_CEObservation.h  test_CEObserver.cpp  test_CEObserver.h  test_CEPlanet.cpp  test_CEPlanet.h  test_CERunningDate.cpp  test_CERunningDate.h  test_CESkyCoord.cpp  test_CESkyCoord.h  test_CETime.cpp  test_CETime.h
cppephem/test/astropy_scripts/: test_cecobserver_setup.py  test_cecoordinates_setup.py  test_ceobserver_setup.py  test_ceplanet_setup.py  test_ceskycoord_setup.py
documentation/docs/: doxygen.config
documentation/html/: CEAngle_8cpp.html  CEAngle_8cpp__incl.map  CEAngle_8cpp__incl.md5  CEAngle_8cpp_source.html  CEAngle_8h.html  CEAngle_8h__dep__incl.map  CEAngle_8h__dep__incl.md5  CEAngle_8h__incl.map  CEAngle_8h__incl.md5  CEAngle_8h_source.html  CEBody_8cpp.html  CEBody_8cpp__incl.dot  CEBody_8cpp__incl.map  CEBody_8cpp__incl.md5  CEBody_8cpp_source.html  CEBody_8h.html  CEBody_8h__dep__incl.dot  CEBody_8h__dep__incl.map  CEBody_8h__dep__incl.md5  CEBody_8h__incl.dot  CEBody_8h__incl.map  CEBody_8h__incl.md5  CEBody_8h_source.html  CECoordinates_8cpp.html  CECoordinates_8cpp__incl.dot  CECoordinates_8cpp__incl.map  CECoordinates_8cpp__incl.md5  CECoordinates_8cpp_source.html  CECoordinates_8h.html  CECoordinates_8h__dep__incl.dot  CECoordinates_8h__dep__incl.map  CECoordinates_8h__dep__incl.md5  CECoordinates_8h__incl.dot  CECoordinates_8h__incl.map  CECoordinates_8h__incl.md5  CECoordinates_8h_source.html  CECorrections_8cpp.html  CECorrections_8cpp__incl.map  CECorrections_8cpp__incl.md5  CECorrections_8cpp_source.html  (+769 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+68 more)
documentation/latex/: annotated.tex  class_c_e_body.tex  class_c_e_coordinate_type.tex  class_c_e_coordinates.tex  class_c_e_date.tex  class_c_e_observer.tex  class_c_e_time.tex  dir_597809b2ea39c1ee77635a3016b3f842.tex  dir_706134e98ac1f9a7c63b57def22ad925.tex  dir_820df503a9e0f15e3dac64db186edc13.tex  md__r_e_a_d_m_e.tex  refman.tex
include/: CEBody.h  CECoordinates.h  CEDate.h  CEException.h  CENamespace.h  CEObservation.h  CEObserver.h  CEPlanet.h  CERunningDate.h  CETime.h  CppEphem.h
misc/: CMakeLists_sofa.txt  Makefile_sofa.am
share/: CMakeLists.txt  README  nutation.txt  ttut1_historic.txt  ttut1_predicted.txt
sofa/src/: CMakeLists.txt  Makefile.am
src/: CEBody.cpp  CECoordinates.cpp  CEDate.cpp  CEException.cpp  CENamespace.cpp  CEObservation.cpp  CEObserver.cpp  CEPlanet.cpp  CERunningDate.cpp  CETime.cpp  CMakeLists.txt  angsep.cpp  cal2jd.cpp  cirs2gal.cpp  cirs2obs.cpp  gal2cirs.cpp  gal2obs.cpp  icrs2cirs.cpp  icrs2obs.cpp  jd2cal.cpp  jd2mjd.cpp  mjd2cal.cpp  mjd2jd.cpp  obs2cirs.cpp  planetephem.cpp  planetpositions.cpp
test/: CMakeLists.txt  Makefile.am
test/include/: CETestSuite.h  test_CEDate.h
test/src/: CETestSuite.cpp  CMakeLists.txt  test_CE.cpp  test_CEDate.cpp  test_cppephem.cpp
tutorial/: ce001_celestial2observed.cpp  ce002_celestial2observed.cpp  ce101_mercuryobservation.cpp  ce104_marsobservation.cpp
(+10 files in other folders)
